--- a/public/stylesheets/globals/_font-sizes.scss
+++ b/public/stylesheets/globals/_font-sizes.scss
@@ -1,4 +1,6 @@
-$larger: 1.4rem;
-$large: 1.2rem;
-$medium: 1rem;
 $small: 0.8rem;
+$medium: 1rem;
+$large: 1.2rem;
+$larger: 1.5rem;
+$xlarge: 2rem;
+$xxlarge: 3rem;
