--- a/views/layouts/browser.pug
+++ b/views/layouts/browser.pug
@@ -24,7 +24,7 @@ block navbar
         +iconButton(
             'navbar-account-button',
             '/images/profileIcon.png'
-        )(class='-circle')
+        )(class='-avatar')
 
 block sidebars
     include ../components/toolbar/contentSidebar
