--- a/public/stylesheets/components/card/_blog-card.scss
+++ b/public/stylesheets/components/card/_blog-card.scss
@@ -8,6 +8,12 @@
     display: flex;
     border: 2px solid colors.$bg2;
 
+    &__stat-list {
+        display: flex;
+        padding: 1rem;
+        border-right: 2px solid colors.$bg2;
+    }
+
     &__overview {
         display: flex;
         flex-direction: column;
@@ -21,15 +27,12 @@
         align-items: center;
     }
 
-    &__author-details {
+    &__content-overview {
         display: flex;
-        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
         gap: 1rem;
-    }
-
-    &__avatar {
-        height: iSizes.$medium;
-        width: iSizes.$medium;
     }
 
     &__title {
@@ -46,6 +49,12 @@
         width: 100%;
     }
 
+    &__keywords-container {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
     &__keywords-heading {
         font-weight: bold;
         margin-bottom: -10px;
@@ -53,10 +62,31 @@
 
     &__keywords {
         display: -webkit-box;
-        -webkit-line-clamp: 2;
+        -webkit-line-clamp: 1;
         -webkit-box-orient: vertical;
         overflow: hidden;
         padding-left: 1rem;
         padding-right: 1rem;
+    }
+
+    &.-small {
+        height: 16rem;
+        width: 24rem;
+
+        .blog-card__stat-list {
+            padding: 0.5rem;
+        }
+
+        .blog-card__author-details {
+            gap: 0.5rem;
+        }
+
+        .blog-card__title {
+            font-size: fSizes.$large;
+        }
+
+        .blog-card__preview {
+            display: none;
+        }
     }
 }
