--- a/public/stylesheets/components/list/_stat-list.scss
+++ b/public/stylesheets/components/list/_stat-list.scss
@@ -4,21 +4,32 @@
 
 .stat-list {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 3rem;
-    padding: 1rem;
-    border-right: 2px solid colors.$bg2;
-    font-size: fSizes.$small;
 
     &__item {
         display: flex;
-        gap: 0.1rem;
+        gap: 0.2rem;
     }
     
     &__icon {
-        height: iSizes.$small;
-        width: iSizes.$small;
+        height: iSizes.$medium;
+        width: iSizes.$medium;
+    }
+
+    &.-column {
+        flex-direction: column;
+    }
+
+    &.-small {
+        .stat-list__icon {
+            height: iSizes.$small;
+            width: iSizes.$small;
+        }
+
+        .stat-list__label {
+            font-size: fSizes.$small
+        }
     }
 }
