--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,11 @@
   display: flex;
   border: 2px solid rgb(36, 36, 36);
 }
+.blog-card__stat-list {
+  display: flex;
+  padding: 1rem;
+  border-right: 2px solid rgb(36, 36, 36);
+}
 .blog-card__overview {
   display: flex;
   flex-direction: column;
@@ -15,18 +20,16 @@
   justify-content: space-between;
   align-items: center;
 }
-.blog-card__author-details {
+.blog-card__content-overview {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
   gap: 1rem;
-}
-.blog-card__avatar {
-  height: 2rem;
-  width: 2rem;
 }
 .blog-card__title {
   margin: 0;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
 }
 .blog-card__preview {
   display: -webkit-box;
@@ -36,17 +39,57 @@
   margin: 0;
   width: 100%;
 }
+.blog-card__keywords-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 .blog-card__keywords-heading {
   font-weight: bold;
   margin-bottom: -10px;
 }
 .blog-card__keywords {
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
   padding-left: 1rem;
   padding-right: 1rem;
+}
+.blog-card.-small {
+  height: 16rem;
+  width: 24rem;
+}
+.blog-card.-small .blog-card__stat-list {
+  padding: 0.5rem;
+}
+.blog-card.-small .blog-card__author-details {
+  gap: 0.5rem;
+}
+.blog-card.-small .blog-card__title {
+  font-size: 1.2rem;
+}
+.blog-card.-small .blog-card__preview {
+  display: none;
+}
+
+.comment-card {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.comment-card__author-date {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.comment-card__content {
+  margin: 0;
+  margin-left: 1rem;
+}
+.comment-card__toolbar {
+  display: flex;
+  gap: 3rem;
 }
 
 .logging-form {
@@ -100,7 +143,7 @@
   height: 2rem;
   width: 2rem;
 }
-.icon-button.-circle {
+.icon-button.-avatar .icon-link__icon {
   border-radius: 50%;
 }
 .icon-button.-burger {
@@ -109,20 +152,53 @@
   padding-left: 0.4rem;
   padding-right: 0.4rem;
 }
+.icon-button.-row {
+  display: flex;
+  gap: 0.1rem;
+}
+.icon-button.-small .icon-button__icon {
+  height: 1.5rem;
+  width: 1.5rem;
+}
 
 .icon-link {
   display: flex;
-  justify-content: center;
   align-items: center;
   gap: 0.5rem;
-  font-size: 1.2rem;
 }
 .icon-link__icon {
   height: 2rem;
   width: 2rem;
 }
-.icon-link.-left {
-  justify-content: flex-start;
+.icon-link.-avatar .icon-link__icon {
+  border-radius: 50%;
+}
+.icon-link.-center {
+  justify-content: center;
+}
+.icon-link.-large .icon-link__icon {
+  height: 3rem;
+  width: 3rem;
+}
+.icon-link.-large .icon-link__label {
+  font-size: 1.2rem;
+}
+.icon-link.-larger .icon-link__icon {
+  height: 5rem;
+  width: 5rem;
+}
+.icon-link.-larger .icon-link__label {
+  font-size: 1.5rem;
+}
+
+.button-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+.button-list.-row-buttons {
+  display: flex;
 }
 
 .link-list {
@@ -133,21 +209,27 @@
 
 .stat-list {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 3rem;
-  padding: 1rem;
-  border-right: 2px solid rgb(36, 36, 36);
-  font-size: 0.8rem;
 }
 .stat-list__item {
   display: flex;
-  gap: 0.1rem;
+  gap: 0.2rem;
 }
 .stat-list__icon {
+  height: 2rem;
+  width: 2rem;
+}
+.stat-list.-column {
+  flex-direction: column;
+}
+.stat-list.-small .stat-list__icon {
   height: 1.5rem;
   width: 1.5rem;
+}
+.stat-list.-small .stat-list__label {
+  font-size: 0.8rem;
 }
 
 .account-sidebar {
@@ -170,7 +252,7 @@
   width: 3rem;
 }
 .account-sidebar__username {
-  font-size: 1.4rem;
+  font-size: 1.5rem;
 }
 .account-sidebar__logout {
   display: flex;
@@ -252,6 +334,8 @@
 }
 
 .page-container {
+  display: flex;
+  justify-content: center;
   overflow: auto;
   min-height: 100vh;
 }
@@ -265,29 +349,63 @@
   border-bottom: 2px solid rgb(36, 36, 36);
 }
 .sidebar__title {
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 1rem;
   border-bottom: 4px solid rgb(36, 36, 36);
 }
 
-.blog {
+.blog-page {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  gap: 2rem;
+  width: 75%;
+  padding: 1rem;
 }
-.blog__author-details {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.blog-page__post-blog-heading {
+  margin: 0;
+  font-size: 2rem;
+  border-bottom: 4px solid rgb(36, 36, 36);
+}
+.blog-page__comment {
+  padding-bottom: 1rem;
+  border-bottom: 2px solid rgb(36, 36, 36);
 }
 
-.blog-card-pair {
+.blog__title {
+  margin: 0;
+  border-bottom: 6px solid rgb(36, 36, 36);
+  font-size: 3rem;
+}
+.blog__metadata {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-bottom: 2rem;
+  border-bottom: 4px solid rgb(36, 36, 36);
+}
+.blog__author-details {
+  flex: 1;
+  display: inline-block;
+}
+.blog__stat-button-list {
+  flex: 2;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  gap: 4rem;
+}
+.blog__date {
+  flex: 1;
+  text-align: right;
+}
+.blog__thumbnail {
+  margin-right: auto;
+  margin-left: auto;
+  width: 75%;
+}
+
+.index-page__blog-card-pair {
   margin-top: 2rem;
 }
 
@@ -368,6 +486,14 @@ ul, ol {
   list-style-type: none;
   padding-left: 0;
   margin: 0;
+}
+
+.blog-card-pair {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 4rem;
 }
 
 .signup-prompt {
