--- a/public/stylesheets/components/card/_blog-card.scss
+++ b/public/stylesheets/components/card/_blog-card.scss
@@ -27,6 +27,18 @@
         align-items: center;
     }
 
+    &__author-details {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    &__avatar {
+        height: iSizes.$medium;
+        width: iSizes.$medium;
+    }
+
     &__content-overview {
         display: flex;
         flex-direction: column;
