--- a/public/stylesheets/components/icon/_icon-button.scss
+++ b/public/stylesheets/components/icon/_icon-button.scss
@@ -26,7 +26,8 @@
 
     &.-row {
         display: flex;
-        gap: 0.1rem;
+        align-items: center;
+        gap: 0.2rem;
     }
 
     &.-small {
