--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,6 +20,16 @@
   justify-content: space-between;
   align-items: center;
 }
+.blog-card__author-details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.blog-card__avatar {
+  height: 2rem;
+  width: 2rem;
+}
 .blog-card__content-overview {
   display: flex;
   flex-direction: column;
@@ -154,7 +164,8 @@
 }
 .icon-button.-row {
   display: flex;
-  gap: 0.1rem;
+  align-items: center;
+  gap: 0.2rem;
 }
 .icon-button.-small .icon-button__icon {
   height: 1.5rem;
@@ -407,6 +418,57 @@
 
 .index-page__blog-card-pair {
   margin-top: 2rem;
+}
+
+.profile-page {
+  width: 75%;
+}
+.profile-page__heading {
+  text-align: center;
+}
+
+.profile {
+  display: flex;
+  gap: 4rem;
+}
+.profile__user-details {
+  flex: 1;
+  display: flex;
+  gap: 1rem;
+}
+.profile__primary-user-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.profile__avatar {
+  height: 20rem;
+  width: 20rem;
+}
+.profile__username {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.profile__heading {
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border-bottom: 2px solid rgb(36, 36, 36);
+}
+.profile__body {
+  margin: 0;
+  margin-bottom: 2rem;
+}
+.profile__edit {
+  display: flex;
+  justify-content: center;
+}
+.profile__edit-button {
+  margin-top: 1rem;
+}
+.profile__author-browser-details {
+  flex: 1;
+  margin-right: 4rem;
 }
 
 * {
