Refactored view components

--- a/public/stylesheets/components/list/_icon-button-list.scss
+++ b/public/stylesheets/components/list/_icon-button-list.scss
@@ -1,10 +1,6 @@
-.button-list {
+.icon-button-list {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 3rem;
-
-    &.-row-buttons {
-        display: flex;
-    }
 }
