--- a/public/stylesheets/components/list/_icon-link-list.scss
+++ b/public/stylesheets/components/list/_icon-link-list.scss
@@ -2,7 +2,7 @@
 @use '../../globals/font-sizes' as fSizes;
 @use '../../globals/icon-sizes' as iSizes;
 
-.link-list {
+.icon-link-list {
     display: flex;
     flex-direction: column;
     gap: 1rem;
