--- a/views/components/card/blogCard.pug
+++ b/views/components/card/blogCard.pug
@@ -1,20 +1,20 @@
-include ../list/statList
+include ../list/iconList
 
 mixin blogCard(blog)
   .blog-card&attributes(attributes)
     .blog-card__stat-list
-      +statList(
+      +iconList(
         {
           'icon': '/images/likeIcon.png',
-          'stat': blog.likes
+          'label': blog.likes
         },
         {
           'icon': '/images/dislikeIcon.png',
-          'stat': blog.dislikes
+          'label': blog.dislikes
         },
         {
           'icon': '/images/commentIcon.png',
-          'stat': blog.comments.length
+          'label': blog.comments.length
         }
       )(class='-column -small')
     .blog-card__overview
