--- a/views/components/card/commentCard.pug
+++ b/views/components/card/commentCard.pug
@@ -1,4 +1,5 @@
-include ../list/buttonList
+include ../list/iconButtonList
+include ../link/iconLink
 
 mixin commentCard(comment, isReply=false) 
     .comment-card&attributes(attributes)
@@ -12,7 +13,7 @@ mixin commentCard(comment, isReply=false)
             .comment-card__date= comment.publish_date
         p.comment-card__content= comment.content
         .comment-card__toolbar
-            +buttonList(
+            +iconButtonList(
                 {
                     'classId': `comment-like-button-${comment._id}`,
                     'icon': '/images/likeIcon.png',
