--- a/views/components/list/iconButtonList.pug
+++ b/views/components/list/iconButtonList.pug
@@ -1,4 +1,4 @@
-include ../icon/iconButton
+include ../button/iconButton
 
 mixin iconButtonList(...buttonItems)
     ul.icon-button-list&attributes(attributes.iconButtonList)
