--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,17 +1,652 @@
-/* Error: Can't find stylesheet to import.
- *   ,
- * 5 | @use 'components/icon/icon-button';
- *   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- *   '
- *   public\stylesheets\style.scss 5:1  root stylesheet */
+.icon-button {
+  padding-top: 0.1rem;
+  padding-bottom: 0.1rem;
+  padding-left: 0.1rem;
+  padding-right: 0.1rem;
+}
+.icon-button__icon {
+  height: 2rem;
+  width: 2rem;
+}
+.icon-button.-avatar .icon-link__icon {
+  border-radius: 50%;
+}
+.icon-button.-burger {
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
+}
+.icon-button.-row {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+}
+.icon-button.-small .icon-button__icon {
+  height: 1.5rem;
+  width: 1.5rem;
+}
 
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 5 \2502  @use 'components/icon/icon-button';\a   \2502  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   public\\stylesheets\\style.scss 5:1  root stylesheet";
+.blog-card {
+  height: 20rem;
+  width: 30rem;
+  display: flex;
+  border: 2px solid rgb(36, 36, 36);
+}
+.blog-card__stat-list {
+  display: flex;
+  padding: 1rem;
+  border-right: 2px solid rgb(36, 36, 36);
+}
+.blog-card__overview {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+}
+.blog-card__author-date {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.blog-card__author-details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.blog-card__avatar {
+  height: 2rem;
+  width: 2rem;
+}
+.blog-card__content-overview {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  gap: 1rem;
+}
+.blog-card__title {
+  margin: 0;
+  font-size: 1.5rem;
+}
+.blog-card__preview {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  margin: 0;
+  width: 100%;
+}
+.blog-card__keywords-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.blog-card__keywords-heading {
+  font-weight: bold;
+  margin-bottom: -10px;
+}
+.blog-card__keywords {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.blog-card.-small {
+  height: 16rem;
+  width: 24rem;
+}
+.blog-card.-small .blog-card__stat-list {
+  padding: 0.5rem;
+}
+.blog-card.-small .blog-card__author-details {
+  gap: 0.5rem;
+}
+.blog-card.-small .blog-card__title {
+  font-size: 1.2rem;
+}
+.blog-card.-small .blog-card__preview {
+  display: none;
+}
+
+.comment-card {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.comment-card__author-date {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.comment-card__content {
+  margin: 0;
+  margin-left: 1rem;
+}
+.comment-card__toolbar {
+  display: flex;
+  gap: 3rem;
+}
+
+.logging-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.logging-form__input {
+  margin-left: 1rem;
+}
+.logging-form__error {
+  color: red;
+  font-weight: bold;
+}
+
+.searchbar {
+  display: flex;
+  align-items: flex-end;
+  gap: 10px;
+  padding-bottom: 0.2rem;
+  padding-top: 0.2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-radius: 25px;
+  background-color: rgb(54, 54, 54);
+}
+.searchbar__icon {
+  height: 1.5rem;
+  width: 1.5rem;
+  min-height: 1.5rem;
+  min-width: 1.5rem;
+}
+.searchbar__form {
+  width: 100%;
+}
+.searchbar__input {
+  width: 100%;
+  font-size: 1.2rem;
+  background: none;
+  border: none;
+  color: white;
+}
+
+.icon-link {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.icon-link__icon {
+  height: 2rem;
+  width: 2rem;
+}
+.icon-link.-avatar .icon-link__icon {
+  border-radius: 50%;
+}
+.icon-link.-center {
+  justify-content: center;
+}
+.icon-link.-large .icon-link__icon {
+  height: 3rem;
+  width: 3rem;
+}
+.icon-link.-large .icon-link__label {
+  font-size: 1.2rem;
+}
+.icon-link.-larger .icon-link__icon {
+  height: 5rem;
+  width: 5rem;
+}
+.icon-link.-larger .icon-link__label {
+  font-size: 1.5rem;
+}
+
+.button-list {
+  display: flex;
+}
+
+.icon-button-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+
+.icon-link-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.icon-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+.icon-list__item {
+  display: flex;
+  gap: 0.2rem;
+}
+.icon-list__icon {
+  height: 2rem;
+  width: 2rem;
+}
+.icon-list.-column {
+  flex-direction: column;
+}
+.icon-list.-small .icon-list__icon {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+.icon-list.-small .icon-list__label {
+  font-size: 0.8rem;
+}
+
+.account-sidebar {
+  right: 0;
+  border-left: 2px solid rgb(36, 36, 36);
+}
+.account-sidebar__signup-prompt {
+  height: 50%;
+}
+.account-sidebar__overview {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding-bottom: 1rem;
+  margin-bottom: 0.5rem;
+  border-bottom: 2px solid rgb(36, 36, 36);
+}
+.account-sidebar__avatar {
+  height: 3rem;
+  width: 3rem;
+}
+.account-sidebar__username {
+  font-size: 1.5rem;
+}
+.account-sidebar__logout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0.5rem;
+  padding-top: 0.5rem;
+  border-top: 2px solid rgb(36, 36, 36);
+  font-size: 1.2rem;
+}
+.account-sidebar.-closed {
+  display: none;
+}
+
+.content-sidebar {
+  left: 0;
+  border-right: 2px solid rgb(36, 36, 36);
+}
+.content-sidebar__heading {
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  border-bottom: 2px solid rgb(36, 36, 36);
+}
+.content-sidebar__section {
+  margin-bottom: 1rem;
+}
+.content-sidebar.-closed {
+  display: none;
+}
+
+.logging-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+.logging-page__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 5%;
+  padding: 4rem;
+  border: 2px solid rgb(36, 36, 36);
+}
+.logging-page__heading {
+  margin-top: 0;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  padding: 1rem;
+  height: 8vh;
+  min-height: 4rem;
+  z-index: 10;
+  border-bottom: 2px solid rgb(36, 36, 36);
+  background-color: black;
+}
+.navbar__left {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+.navbar__center {
+  flex: 2;
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+.navbar__right {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 2rem;
+}
+
+.page-container {
+  display: flex;
+  justify-content: center;
+  overflow: auto;
+  min-height: 100vh;
+}
+
+.sidebar {
+  position: fixed;
+  height: 100%;
+  width: 25%;
+  padding: 1rem;
+  z-index: 10;
+  background-color: black;
+  border-bottom: 2px solid rgb(36, 36, 36);
+}
+.sidebar__title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  border-bottom: 4px solid rgb(36, 36, 36);
+}
+
+.blog-form-page {
+  display: flex;
+  width: 80%;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.blog-form-page__left {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.blog-form-page__right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.blog-form-page__heading {
+  font-size: 2rem;
+  font-weight: bold;
+}
+.blog-form-page__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  padding: 1rem;
+  border: 2px solid white;
+}
+
+.blog-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  border-top: 2px solid white;
+  padding-top: 1rem;
+}
+.blog-form__metadata {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.blog-form__metadata.-hidden {
+  display: none;
+}
+.blog-form__content {
+  height: 100%;
+}
+.blog-form__content.-hidden {
+  display: none;
+}
+
+.tox.tox-tinymce {
+  min-height: 100%;
+}
+
+.blog-preview {
+  overflow: auto;
+  hyphens: auto;
+  width: 100%;
+  height: 100%;
+}
+
+.blog-page {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 80%;
+  padding: 1rem;
+}
+.blog-page__post-blog-heading {
+  margin: 0;
+  font-size: 2rem;
+  border-bottom: 4px solid rgb(36, 36, 36);
+}
+.blog-page__comment {
+  padding-bottom: 1rem;
+  border-bottom: 2px solid rgb(36, 36, 36);
+}
+
+.blog__title {
+  margin: 0;
+  border-bottom: 6px solid rgb(36, 36, 36);
+  font-size: 3rem;
+}
+.blog__metadata {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-bottom: 2rem;
+  border-bottom: 4px solid rgb(36, 36, 36);
+}
+.blog__author-details {
+  flex: 1;
+  display: inline-block;
+}
+.blog__stat-button-list {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.blog__date {
+  flex: 1;
+  text-align: right;
+}
+.blog__thumbnail {
+  margin-right: auto;
+  margin-left: auto;
+  width: 75%;
+}
+
+.index-page__blog-card-pair {
+  margin-top: 2rem;
+}
+
+.profile-page {
+  width: 75%;
+}
+.profile-page__heading {
+  text-align: center;
+}
+
+.profile {
+  display: flex;
+  gap: 4rem;
+}
+.profile__user-details {
+  flex: 1;
+  display: flex;
+  gap: 1rem;
+}
+.profile__primary-user-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.profile__avatar {
+  height: 20rem;
+  width: 20rem;
+}
+.profile__username {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.profile__heading {
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border-bottom: 2px solid rgb(36, 36, 36);
+}
+.profile__body {
+  margin: 0;
+  margin-bottom: 2rem;
+}
+.profile__edit {
+  display: flex;
+  justify-content: center;
+}
+.profile__edit-button {
+  margin-top: 1rem;
+}
+.profile__author-browser-details {
+  flex: 1;
+  margin-right: 4rem;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  color: white;
+}
+
+a {
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #b22eff;
+}
+a.-button {
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  color: #b22eff;
+  border: 2px solid #b22eff;
+  border-radius: 5px;
+  background: none;
+  font-size: 1.2rem;
+}
+a.-button:hover {
+  color: white;
+  background-color: #b22eff;
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  background-color: rgb(18, 18, 18);
+}
+
+button {
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  color: white;
+  border: 2px solid rgb(54, 54, 54);
+  border-radius: 5px;
+  background: none;
+  font-size: 1.2rem;
+}
+button:hover {
+  background-color: rgb(54, 54, 54);
+}
+button.-colorful {
+  color: #b22eff;
+  border: 2px solid #b22eff;
+}
+button.-colorful:hover {
+  color: white;
+  background-color: #b22eff;
+}
+button.-tab {
+  border-radius: 0;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+h1, h2 {
+  text-transform: capitalize;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+img {
+  height: 100%;
+  width: 100%;
+}
+
+ul, ol {
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+.blog-card-pair {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 4rem;
+}
+
+.signup-prompt {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  font-size: 1.2rem;
 }
