Added formInput view component

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,6 +1,7 @@
 @use 'components/button/icon-button';
 @use 'components/card/blog-card';
 @use 'components/card/comment-card';
+@use 'components/form/form-input';
 @use 'components/form/logging-form';
 @use 'components/form/searchbar';
 @use 'components/link/icon-link';
