--- a/public/stylesheets/pages/_blog-form.scss
+++ b/public/stylesheets/pages/_blog-form.scss
@@ -53,6 +53,7 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        width: 100%;
 
         &.-hidden {
             display: none;
