--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -131,17 +131,18 @@
   gap: 3rem;
 }
 
+.form-input__input {
+  margin-left: 1rem;
+}
+.form-input__error {
+  color: red;
+  font-weight: bold;
+}
+
 .logging-form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-}
-.logging-form__input {
-  margin-left: 1rem;
-}
-.logging-form__error {
-  color: red;
-  font-weight: bold;
 }
 
 .searchbar {
@@ -417,6 +418,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 100%;
 }
 .blog-form__metadata.-hidden {
   display: none;
